--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     tty: true
     stdin_open: true
     ports:
-      - "3000:3000"
+      - 3000:3000
     depends_on:
       - db
     networks:
@@ -27,11 +27,23 @@ services:
     env_file:
       - kinokus-spa/.env
     ports:
-      - "80:80"
+      - 80:80
+      - 443:443
+    restart: always
     depends_on:
       - backend
     networks:
       - dev
+    volumes:
+      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/nginx/ssl/:ro
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
 
   db:
     image: postgres:14
