--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     networks:
       - dev
     volumes:
-      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./nginx/conf/:/etc/nginx/nginx.conf
       - '/etc/letsencrypt:/etc/letsencrypt'
 
   # certbot:
